upgrade to Java 21 and update dependencies